@@ -45,6 +45,10 @@ New user-visible features
     - Radvd application (send RA);
     - Examples (ping6, simple-routing-ping6, radvd, radvd-two-prefix,
       icmpv6-redirect).
+
+  c) added AthstatsHelper, which enables the wifi device to produce
+     periodic reports similar to the ones generated by madwifi's
+     athstats tool (Nicola Baldo)
  
  
 API changes from ns-3.5
